--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "nuxt-i18n": "^6.15.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -40,6 +41,7 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-vuejs-accessibility": "^0.5.1",
     "husky": "^4.3.0",
     "jest": "^26.5.0",
