--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@vue-a11y/announcer": "^2.1.0",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
-    "nuxt-i18n": "^6.15.4"
+    "nuxt-i18n": "^6.15.4",
+    "portal-vue": "^2.1.7",
+    "wicg-inert": "^3.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
